updated pot file, and spanish translations

--- a/lang/wp-revised-status-es_ES.po
+++ b/lang/wp-revised-status-es_ES.po
@@ -1,69 +1,121 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Revised Status\n"
-"POT-Creation-Date: 2015-07-18 17:56+0200\n"
-"PO-Revision-Date: 2015-07-18 17:56+0200\n"
+"POT-Creation-Date: 2015-09-20 11:07+0200\n"
+"PO-Revision-Date: 2015-09-20 11:13+0200\n"
 "Last-Translator: Ivan <ivan@yivoff.com>\n"
 "Language-Team: Ivan <ivan@yivoff.com>\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.2\n"
+"X-Generator: Poedit 1.8.5\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-WPHeader: init.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
-"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
+"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#: src/RevisedStatus/Controller/Options.php:53
+#: src/RevisedStatus/Controller/Options.php:83
 msgid "Publish Status Revisions Options"
 msgstr "Opciones de publicación Revisiones del Estado"
 
-#: src/RevisedStatus/Controller/Options.php:54
+#: src/RevisedStatus/Controller/Options.php:84
 msgid "Published Status Revisions"
 msgstr "Revisiones de Estado de Publicación"
 
-#: src/RevisedStatus/Controller/Options.php:69
+#: src/RevisedStatus/Controller/Options.php:104
 msgid ""
 "Enable or disable publishing status revisions for your activated post types"
 msgstr ""
 "Habilitar o inhabilitar el seguimiento de estado de publicación para tus "
 "post-types activados"
 
-#: src/RevisedStatus/Controller/Options.php:90
+#: src/RevisedStatus/Controller/Options.php:121
+msgid "Track all registered (versioned) posttypes"
+msgstr ""
+"Seguir todos los tipos de post registrados (con posibilidad de guardar "
+"versiones)"
+
+#: src/RevisedStatus/Controller/Options.php:135
 msgid "Track"
 msgstr "Registrar"
 
-#: src/RevisedStatus/View/Options.php:29
+#: src/RevisedStatus/View/Options.php:27
 msgid "Publishing status tracking options"
 msgstr "Ajustes de rastreo de estado de publicación"
 
-#: src/RevisedStatus/View/Options.php:35
+#: src/RevisedStatus/View/Options.php:34
 msgid "Save"
 msgstr "Guardar"
 
-#: src/RevisedStatus/View/Options.php:61
-msgid ""
-"Attention: Tracking for the following post-types has been enabled from a "
-"theme or a plugin:"
-msgstr ""
-"Atención: El seguimiento se ha desactivado para los siguientes post-types "
-"desde un tema o plugin:"
+#: src/RevisedStatus/View/Options.php:40
+msgid "Filter Hooks available"
+msgstr "Filtros disponibles."
 
-#: src/RevisedStatus/View/Options.php:75
-msgid ""
-"Warning: Tracking for the following post-types has been disabled from a "
-"theme or a plugin:"
+#: src/RevisedStatus/View/Options.php:42
+msgid "Options set via hooks supersede options chosen in this page"
 msgstr ""
-"Advertencia: Para los siguientes post-tupes el seguimiento ha sido "
-"desactivado en un tema o plugin:"
+"Las opciones configuradas a través de filtros tienen más prioridad que las "
+"elegidas en esta página. "
 
-#: src/RevisedStatus/View/RevisionMetabox.php:46
+#: src/RevisedStatus/View/Options.php:46
+msgid ""
+"Sets up tracking for all available versioned post-types. Return <em>true</"
+"em> to activate."
+msgstr ""
+"Configura el seguimiento para todos los tipos de post disponibles, en tanto "
+"y en cuanto soporten versiones. Devolver <em>true</em> para activar."
+
+#: src/RevisedStatus/View/Options.php:54
+msgid ""
+"Return an associative array in this filter to activate tracking to your "
+"chosen post types. e.g:"
+msgstr ""
+"Devuelve un array asociativo en este filtro para activar el seguimiento para "
+"los tipos de post que quieras. E.g.:"
+
+#: src/RevisedStatus/View/Options.php:65
+msgid "Redundant with the previous filter"
+msgstr "El uso del filtro anterior vuelve a este redundante."
+
+#: src/RevisedStatus/View/Options.php:68
+msgid ""
+"Return an associative array in this filter to disable tracking for your "
+"chosen post types. e.g:"
+msgstr ""
+"Devuelve un array asociativo en este filtro para desactivar el seguimiento "
+"para los tipos de post que quieras. E.g.:"
+
+#: src/RevisedStatus/View/Options.php:78
+msgid "Trumps all other options or filters"
+msgstr "Con más prioridad que cualquiera de las otras opciones."
+
+#: src/RevisedStatus/View/Options.php:110
+msgid ""
+"Attention: Settings for this plugin have been modified by use of actions "
+"hooks, done from within a theme or plugin:"
+msgstr ""
+"Atención: La configuración de este plugin ha sido modificada a través de "
+"filtros desde un tema o plugin. "
+
+#: src/RevisedStatus/View/Options.php:143
+msgid "Warning, this setting has been activated by a plugin hook."
+msgstr ""
+"Advertencia: el seguimiento ha sido activado para este posttype desde un "
+"tema o plugin. "
+
+#: src/RevisedStatus/View/Options.php:146
+msgid "Warning, tracking of this post type has been disabled by a plugin hook."
+msgstr ""
+"Advertencia: El rastreo de este posttype ha sido desactivado desde un tema o "
+"plugin."
+
+#: src/RevisedStatus/View/RevisionMetabox.php:43
 msgid "Revisions (with publication status history)"
 msgstr "Revisiones (con historial estado de publicación)"
 
@@ -71,28 +123,28 @@ msgstr "Revisiones (con historial estado de publicación)"
 msgid "JavaScript must be enabled to use this feature."
 msgstr "Debes tener JavaScript habilitado para usar esta característica."
 
-#: src/RevisedStatus/View/RevisionMetabox.php:118
+#: src/RevisedStatus/View/RevisionMetabox.php:119
 msgctxt "revision date format"
 msgid "F j, Y @ H:i:s"
 msgstr "j F, Y @ H:is"
 
-#: src/RevisedStatus/View/RevisionMetabox.php:129
+#: src/RevisedStatus/View/RevisionMetabox.php:130
 #, php-format
 msgctxt "post revision title"
 msgid "%1$s %2$s, %3$s ago (%4$s)"
 msgstr "%1$s %2$s, hace %3$s (%4$s)"
 
-#: src/RevisedStatus/View/RevisionMetabox.php:136
+#: src/RevisedStatus/View/RevisionMetabox.php:137
 #, php-format
 msgid "%1$s [Autosave]"
 msgstr "%1$s [Autoguardado]"
 
-#: src/RevisedStatus/View/RevisionMetabox.php:137
+#: src/RevisedStatus/View/RevisionMetabox.php:138
 #, php-format
 msgid "%1$s [Current Revision]"
 msgstr "%1$s [Revisión actual]"
 
-#: src/RevisedStatus/View/RevisionMetabox.php:150
+#: src/RevisedStatus/View/RevisionMetabox.php:151
 msgid "Not tracked"
 msgstr "No registrado"
 
